--- a/PP/PP.csproj
+++ b/PP/PP.csproj
@@ -52,6 +52,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="selectCode.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="selectCode.Designer.cs">
+      <DependentUpon>selectCode.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="selectType.cs">
@@ -72,6 +78,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="selectCode.resx">
+      <DependentUpon>selectCode.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="selectType.resx">
       <DependentUpon>selectType.cs</DependentUpon>
     </EmbeddedResource>
