--- a/PP/PP.csproj
+++ b/PP/PP.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Refactor.cs" />
     <Compile Include="selectCode.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -60,6 +61,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="selectRename.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="selectRename.Designer.cs">
+      <DependentUpon>selectRename.cs</DependentUpon>
+    </Compile>
     <Compile Include="selectType.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -80,6 +87,9 @@
     </Compile>
     <EmbeddedResource Include="selectCode.resx">
       <DependentUpon>selectCode.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="selectRename.resx">
+      <DependentUpon>selectRename.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="selectType.resx">
       <DependentUpon>selectType.cs</DependentUpon>
